Spacing fixes

--- a/FrontTerm/freethrow.css
+++ b/FrontTerm/freethrow.css
@@ -17,7 +17,7 @@ body {
 
 .container {
 
-    max-width: 1000px;
+    max-width: 1050px;
     margin: 0 auto;
     background-color: #fff;
     padding: 20px;
